2014-03-27  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* patches/boot/hotspot/default/jdk-dependency.patch:
	Moved to...
	* patches/boot/hotspot/zero/jdk-dependency.patch:
	Removed; no longer a zero HotSpot build.
	* Makefile.am:
	(ICEDTEA_BOOT_PATCHES): Make jdk-dependency not
	dependent on HotSpot version.
	* patches/boot/hotspot-jdk-dependency.patch:
	...here.

2014-03-07  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* patches/systemtap_gc.patch: Moved to...
	* Makefile.am:
	(ICEDTEA_PATCHES): Make systemtap_gc.patch
	HotSpot-dependent.
	* hotspot.map: Add aarch64 HotSpot.
	* patches/hotspot/aarch64/systemtap_gc.patch:
	New patch against AArch64 HotSpot tarball.
	* patches/hotspot/default/systemtap_gc.patch:
	... here.

2014-03-26  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(JDK_CHANGESET): Bring in PR1713.
	(JDK_SHA256SUM): Likewise.
	* NEWS:
	List PR1713 and enablement of ARM32 JIT.
	Add AArch64 section and rename 'ARM port' section
	as 'ARM32 port'.

2014-03-21  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* acinclude.m4:
	(IT_ENABLE_ARM32JIT): Turn JIT on by default.

2014-02-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add Gentoo bug reference for
	PaX update.

2014-02-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1684: Build fails with empty PAX_COMMAND
	* Makefile.am:
	(ICEDTEA_ENV): Only add PAX_COMMAND when defined.
	* NEWS: Updated.

2014-02-21  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* acinclude.m4:
	(IT_WITH_PAX): Leave PAX_COMMAND with the empty
	string rather than "not specified" to avoid build
	failures.
	* pax-mark-vm.in: Update PAX_COMMAND check.

2014-02-19  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* patches/boot/test_gamma.patch,
	* patches/pax-mark-rmic-java.patch,
	* patches/test_gamma.patch:
	Removed.
	* INSTALL:
	Document ARM32 JIT and --enable-arm32-jit option.
	* Makefile.am:
	(CORBA_CHANGESET): Update to icedtea-2.4.6pre01 tag.